<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/common_bg_dialog_rounded"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/big_margin">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_sort_popularity_by" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_crescent"
        style="@style/Body.Blue.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_extra_margin"
        android:background="@drawable/common_bg_button_rounded"
        android:gravity="center"
        android:paddingHorizontal="@dimen/short_margin"
        android:paddingVertical="@dimen/little_margin"
        android:text="@string/search_crescent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_descending"
        style="@style/Body.Blue.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:background="@drawable/common_bg_button_rounded"
        android:gravity="center"
        android:paddingHorizontal="@dimen/short_margin"
        android:paddingVertical="@dimen/little_margin"
        android:text="@string/search_descending" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_none"
        style="@style/Body.Blue.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:background="@drawable/common_bg_button_rounded"
        android:gravity="center"
        android:paddingHorizontal="@dimen/short_margin"
        android:paddingVertical="@dimen/little_margin"
        android:text="@string/search_none" />

</androidx.appcompat.widget.LinearLayoutCompat>